--- a/test.html
+++ b/test.html
@@ -9,6 +9,6 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <h4>Welcome to theses 3 months of serious training.....</h4>
 </body>
 </html>
